--- a/src/components/Review/Review.css
+++ b/src/components/Review/Review.css
@@ -4,7 +4,7 @@
   
 }
 .container-r{
-    background-color: black;
+    background-color: white;
     border: 2px solid whitesmoke;
     border: 2px solid red;
     margin-left: 5px;
